Fix background color not switching with dark mode status

--- a/hello-world/src/styles/global.css
+++ b/hello-world/src/styles/global.css
@@ -1,7 +1,10 @@
 
-@layer base {
-  html {
-    @apply bg-white;
-    @apply dark:bg-[hsl(210deg, 30%, 8%)];
+body {
+  @apply bg-white;
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: hsl(210deg, 30%, 8%) !important;
   }
 }
